CKAD-exercises/ckad-challenges/net-policies/google-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: google-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 142.250.114.104/32
    ports:
    - port: 433
      protocol: TCP
