CKAD-exercises/ckad-challenges/net-policies/nginx-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 3333
  # for DNS access
  - to:
    ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
